--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -20,3 +20,13 @@
   color: #ad5502;
   font-size: 1.25rem;
 }
+
+.parent-container {
+  width: auto;
+  max-width: 100%;
+}
+
+.img {
+  width: 190px !important;
+  height: 150px !important;
+}
